Next project idea

--- a/projects/index.html
+++ b/projects/index.html
@@ -52,15 +52,15 @@
 
         <table id="link-table" data-columns="2">
           <tbody>
-            <!-- <tr>
+            <tr>
               <td>
-                <a href="/projects/js-html-sanitizer">JS HTML Sanitizer</a>
+                <a href="/projects/js-vibration">JS Vibration</a>
               </td>
-            </tr> -->
+            </tr>
 
             <tr>
               <td>
-                <a href="/projects/js-document-picture-in-picture/">JS Document Picture-in-Picture</a>
+                <a href="/projects/js-document-picture-in-picture">JS Document Picture-in-Picture</a>
               </td>
             </tr>
 
