Added next tech talk presentation template

--- a/presentations/index.html
+++ b/presentations/index.html
@@ -54,6 +54,14 @@
           <tbody>
             <tr>
               <td>
+                <a href="/presentations/framework-updates-and-upgrades">Framework Updates and Upgrades</a>
+              </td>
+
+              <td>TBD</td>
+            </tr>
+
+            <tr>
+              <td>
                 <a href="/presentations/beyond-the-linter">Beyond the Linter: Crafting Enduring Code</a>
               </td>
 
