Added next project

--- a/projects/index.html
+++ b/projects/index.html
@@ -54,6 +54,12 @@
           <tbody>
             <tr>
               <td>
+                <a href="/projects/procedural-generation">Procedural Generation</a>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
                 <a href="/projects/js-vibration">JS Vibration</a>
               </td>
             </tr>
