feat: Enhance terrain generation with biomes, climate maps, and advanced rendering
- Added biome definitions and a function to determine biome based on elevation, moisture, and temperature.
- Updated HeightMapGenerator to support moisture and temperature map generation.
- Introduced methods for generating rivers and applying hydraulic erosion to the height map.
- Implemented vegetation distribution generation based on biomes.
- Added settlement generation using Poisson disc sampling and road network generation with A* pathfinding.
- Enhanced TerrainRenderer to support 3D isometric rendering and biome-based coloring.
- Created a new terrain-worker.js file to offload terrain generation to a web worker for improved performance.

--- a/projects/index.html
+++ b/projects/index.html
@@ -52,9 +52,9 @@
 
         <table id="link-table" data-columns="2">
           <tbody>
-            <tr>
+            <tr hidden>
               <td>
-                <a href="/projects/procedural-generation">Procedural Generation</a>
+                <a href="/projects/procedural-generation">Procedural Generation (Vibe Coded)</a>
               </td>
             </tr>
 
