fix: Update assessment state machine presentation details and date

--- a/presentations/assessment-state-machine/index.html
+++ b/presentations/assessment-state-machine/index.html
@@ -45,13 +45,13 @@
       <div class="slides">
         <section>
           <h2>Assessment State Machine</h2>
-          <h4>Managing Assessment States Effectively</h4>
+          <h4>Managing Assessment State Effectively</h4>
 
           <br />
           <br />
 
           <p>Christopher R. Bilger</p>
-          <p>TBD</p>
+          <p>January 14th, 2026</p>
         </section>
 
         <section>
