--- a/presentations/index.html
+++ b/presentations/index.html
@@ -54,10 +54,12 @@
           <tbody>
             <tr>
               <td>
-                <a href="/presentations/assessment-state-machine">Assessment State Machine</a>
+                <a href="/presentations/assessment-state-machine">
+                  Assessment State Machine: Managing Assessment State Effectively
+                </a>
               </td>
 
-              <td>TBD</td>
+              <td>January 14th, 2026</td>
             </tr>
 
             <tr>
