--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
 
     <script type="module" src="./js/casper/index.js" defer></script>
+    <script type="module" src="./js/snowfall.js" defer></script>
 
     <style>
       html {
