feat: Update name display from "Christopher Bilger" to "Chris Bilger"

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <main>
       <div id="introduction">
         <div>
-          <h1 id="name"> Hi, I'm <span class="black">Christopher Bilger</span> </h1>
+          <h1 id="name">Hi, I'm <span class="black">Chris Bilger</span></h1>
         </div>
       </div>
 
